Pushing recent clickthrough changes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -12,7 +12,7 @@ body {
 .header {
     pointer-events: none;
     z-index: 100000;
-    background-color: aqua;
+    background-color: white;
 }
 
 .header .menuBar {
