--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,8 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+html {
+    height: 100%;
+    width: 100%;
+}
 
 body {
     /*background-color: #4C4CFF;*/
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     letter-spacing: 0.1em;
     margin: 0;
     height: 100%;
@@ -10,43 +17,39 @@ body {
 }
 
 .header {
-    pointer-events: none;
-    z-index: 100000;
-    background-color: white;
+    background: linear-gradient(5deg, #536DFE, #53FFFF);
+    font-family: 'PT Sans', sans-serif;
+    margin: 0;
+    padding-right: 1em;
+    padding-left: 1em;
+    line-height: 2.2em;
 }
 
-.header .menuBar {
-    margin: 0px;
-    padding-top: 0;
-    padding-left: 15px;
-    padding-right: 15px;
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    background-color: #9f9f;
-    width: 100%;
-    line-height: 0.5em;
-    border-bottom: solid #8dbf8d 1px;
+.menuBarWrapper {
+    height: 2.2em;
+    padding: 0;
+    overflow: hidden;
 }
 
-.menuBar {
-    margin-left: 2em;
-    padding-right: 2em;
-    width: 100%;
-    background-color: aqua;
+.menuList {
+    height: 2.5em;
+    margin: 0;
+    padding: 0;
+    color: white;
 }
 
-h2 {
-    font-weight: 3000;
+.menutitle {
+    line-height: 2em;
+    font-size: 1.25em;
+    margin: 0;
+    padding: 0;
+    color: white;
     text-transform: uppercase;
-    vertical-align: center;
-    font-size: 15px;
+    display: inline;
 }
 
-.wrapper {
-    /*margin-top: 3em;
-    margin-left: 2em;*/
+.bar-items {
+    float: right;
 }
 
 .container {
@@ -67,4 +70,39 @@ h2 {
     margin: 5px;
     /*pointer-events: none;*/
     z-index: -1;
+}
+
+/* Loding Circle */
+
+@keyframes loading-circle {
+  to {transform: rotate(360deg);}
+}
+ 
+.loading-circle:after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-top-color: #333;
+  animation: loading-circle .6s linear infinite;
+}
+
+/* Menubar buttons */
+
+.bar-buttons {
+    float: right;
+}
+
+/* More animations */
+@keyframes slide {
+    0% { background-position: 0 0; }
+    50% { background-position: -4000px 0; }
+    100% { background-position: 0 0; }
 }
